--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html lang='es'>
     <head>
         <meta charset='utf-8'>
-        <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel='stylesheet' href='css/style.css'>
         <script src="https://kit.fontawesome.com/52e37338b5.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
 
     </head>
     <body>
-        <div class="container layout">
+        <div class="container ">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light  ">
                     <div class="container-fluid">
-                      <a class="navbar-brand fs-1" href="index.html">Dolcelatto</a>
+                      <a class="navbar-brand fs-1 fw-bold dolcelatto" href="index.html">Dolcelatto</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="sabores.html">Sabores</a>
+                            <a class="nav-link active fs-4 " aria-current="page" href="sabores.html">Sabores</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Delivery</a>
+                            
                           </li>                                                
                         </ul>                        
                       </div>
@@ -40,7 +42,7 @@
                     <div class="row">
                         <div class="card card1" style="width: 180rem;">                            
                                 <div class="container-fluid">
-                                    <h3 class="fs-2 text-center card__title">¡Helado 100% artesanal!</h3>
+                                    <h3 class="fs-2 text-center card__title fw-bold">¡Helado 100% artesanal!</h3>
                                     <div class="row">
                                       <div class="col-lg">
                                          <img src="img/ice-cream-1.jpg" class="img-fluid" alt="Heladito">
@@ -51,7 +53,7 @@
                                     </div>
                                   </div>  
                             <div class="card-body">                            
-                            <p class="card-text text-center fs-5">Todos nuestros productos estan elaborados con materia prima de primera calidad</p>                          
+                            <p class="card-text text-center fs-4">Todos nuestros productos estan elaborados con materia prima de primera calidad</p>                          
                             </div>
                         </div>
                     </div>
@@ -59,7 +61,7 @@
                     <div class="row">
                         <div class="card card1" style="width: 180rem;">
                             <div class="container-fluid">
-                                <h3 class="fs-2 text-center card__title">¡Tambien contamos con cafeteria!</h3>
+                                <h3 class="fs-2 text-center card__title fw-bold">¡Tambien contamos con cafeteria!</h3>
                                 <div class="row">
                                   <div class="col-lg">
                                      <img src="img/coffe-1.jpg" class="img-fluid" alt="Coffe">
@@ -71,11 +73,16 @@
                               </div>  
                             <div class="card-body">
                               <h5 class="card-title"></h5>
-                              <p class="card-text text-center fs-5">Tenemos servicio de cafeteria, con medialunas y/o tostados para acompañar</p>                              
+                              <p class="card-text text-center fs-4">Tenemos servicio de cafeteria, con medialunas y/o tostados para acompañar</p>                              
                             </div>
                         </div>
                     </div>
                 </section>
+            </div>
+
+
+            <div class="pop-up">
+              <a href='https://wa.me/2272411086?textHola,%20quisiera%20hacer%20un%20pedido.' target='blank' class='fs-3'><i class="fab fa-whatsapp"></i>  Pedidos</a>
             </div>
 
             <!-- Footer -->
@@ -83,9 +90,11 @@
               <footer class='mt-2 p-3'> 
                 <div class="container">
                     <div class='text-center'>
-                      <h3 class='h4 mb-3'>Contacto:</h3>
-                      <i class="fas fa-thumbtack text-lg"> Calle 109 esq 16</i><br>
-                      <a href='#' class='text-reset'><i class="fab fa-instagram text-lg fw-bold"> Dolcelatto</i></a>   
+                      <h3 class='h4 mb-3 fs-3 fw-bold'>Contacto:</h3>
+                      <div class="container"></div>
+                      <i class="fas fa-thumbtack fs-5"> Calle 109 esq 16</i><br>
+                      <a href='https://instagram.com/dolcelattoheladosc?utm_medium=copy_link' target="blank" class='text-reset fs5'><i class="fab fa-instagram text-lg fw-bold"> Dolcelatto</i></a>   
+                    
                     </div>
                   </div>
             </footer>
