--- a/sabores.html
+++ b/sabores.html
@@ -2,30 +2,31 @@
 <html lang='es'>
     <head>
         <meta charset='utf-8'>
-        <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel='stylesheet' href='css/style.css'>
         <script src="https://kit.fontawesome.com/52e37338b5.js" crossorigin="anonymous"></script>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
     </head>
     <body>
-        <div class="container">
+        <div class="container  ">
             <header>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <nav class="navbar navbar-expand-lg navbar-light  ">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="index.html">Dolcelatto</a>
+                      <a class="navbar-brand fs-1 fw-bold dolcelatto" href="index.html">Dolcelatto</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="sabores.html">Sabores</a>
+                            <a class="nav-link active fs-4" aria-current="page" href="sabores.html">Sabores</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Delivery</a>
+                            
                           </li>                                                
                         </ul>                        
                       </div>
@@ -33,15 +34,16 @@
                   </nav>
             </header>
             <!-- Main -->
+            <div class="clear"></div>
             <div class="container">
                 <div class="container">
                     <div class="row">
                       <div class="col-lg">                          
                         <div class="card text-white  mb-3 card2" style="max-width: 180rem;">
-                            <div class="card-header">Frutos al agua</div>
+                            <div class="card-header fw-bold fs-2">Frutos al agua</div>
                             <div class="card-body">
                               <p class="card-text">
-                                <ul>
+                                <ul class='fs-5'>
                                     <li>Ananá</li>
                                     <li>Frutilla</li>
                                     <li>Limón</li>
@@ -53,10 +55,10 @@
                       </div>
                       <div class="col-lg">
                         <div class="card text-white mb-3 card2" style="max-width: 180rem;">
-                            <div class="card-header">Chocolates</div>
+                            <div class="card-header fw-bold fs-2">Chocolates</div>
                             <div class="card-body">
                               <p class="card-text">
-                                <ul>
+                                <ul class='fs-5'>
                                     <li>Chocolate</li>
                                     <li>Chocolate c/ Almendras</li>
                                     <li>Chocolate Blanco</li>
@@ -71,10 +73,10 @@
                       </div>
                       <div class="col-lg">
                         <div class="card text-white mb-3 card2" style="max-width: 180rem;">
-                            <div class="card-header">Cremas</div>
+                            <div class="card-header fw-bold fs-2">Cremas</div>
                             <div class="card-body">
                               <p class="card-text">
-                                <ul>
+                                <ul class='fs-5'>
                                     <li>Americana</li>
                                     <li>Crema del Cielo</li>
                                     <li>Vainilla</li>
@@ -93,10 +95,10 @@
                     <div class="row">
                       <div class="col-lg">
                         <div class="card text-white mb-3 card2" style="max-width: 180rem;">
-                            <div class="card-header">Dulce de leche</div>
+                            <div class="card-header fw-bold fs-2">Dulce de leche</div>
                             <div class="card-body">
                               <p class="card-text">
-                                <ul>
+                                <ul class='fs-5'>
                                     <li>Dulce de Leche </li>
                                     <li>Dulce c/ Nuez</li>
                                     <li>Dulce Granizado</li>
@@ -108,10 +110,10 @@
                       </div>
                       <div class="col-lg">
                         <div class="card text-white mb-3 card2" style="max-width: 180rem;">
-                            <div class="card-header">Frutos a la crema</div>
+                            <div class="card-header fw-bold fs-2">Frutos a la crema</div>
                             <div class="card-body">
                               <p class="card-text">
-                                <ul>
+                                <ul class='fs-5'>
                                     <li>Ananá</li>
                                     <li>Frutilla</li>
                                     <li>Cereza</li>
@@ -126,10 +128,10 @@
                           </div>
                       </div>
                       <div class="col-lg"><div class="card text-white mb-3 card2" style="max-width: 180rem;">
-                        <div class="card-header">Especiales</div>
+                        <div class="card-header fw-bold fs-2">Especiales</div>
                         <div class="card-body">
                           <p class="card-text">
-                            <ul>
+                            <ul class='fs-5'>
                                 <li>Mantecol</li>
                                 <li>Flan con Dulce</li>
                                 <li>Tramontana</li>
@@ -150,14 +152,22 @@
                   </div>
             </div>
 
+            <!-- Pop-UP -->
+
+            <div class="pop-up">
+              <a href='https://wa.me/2272411086?textHola,%20quisiera%20hacer%20un%20pedido.' target='blank' class='fs-3'><i class="fab fa-whatsapp"></i>  Pedidos</a>
+            </div>
+
             <!-- Footer -->
             <div class="container">
               <footer class='mt-2 p-3'> 
                 <div class="container">
                     <div class='text-center'>
-                      <h3 class='h4 mb-3'>Contacto:</h3>
-                      <i class="fas fa-thumbtack text-lg"> Calle 109 esq 16</i><br>
-                      <a href='#' class='text-reset'><i class="fab fa-instagram text-lg fw-bold"> Dolcelatto</i></a>   
+                      <h3 class='h4 mb-3 fs-3 fw-bold'>Contacto:</h3>
+                      <div class="container"></div>
+                      <i class="fas fa-thumbtack fs-5"> Calle 109 esq 16</i><br>
+                      <a href='https://instagram.com/dolcelattoheladosc?utm_medium=copy_link' target="blank" class='text-reset fs5'><i class="fab fa-instagram text-lg fw-bold"> Dolcelatto</i></a>   
+                    
                     </div>
                   </div>
             </footer>
